[project]
name = "pypension"
version = "0.1.0"
description = "Backtest pension investments"
license = "Proprietary"
authors = [
    { name = "bollard", email = "358225+bollard@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.12"

dependencies = [
    "matplotlib >= 3.10.6",
    "numpy >= 2.3.3",
    "pandas >= 2.3.2",
    "scipy >= 1.16.2",
    "seaborn >= 0.13.2",
    "yfinance >= 0.2.66",
]

[tool.poetry]
requires-poetry = ">= 2.0"
packages = [
    { include = "pypension", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ruff = ">= 0.12.7"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"] # isort

[build-system]
requires = ["poetry-core >= 2.0"]
build-backend = "poetry.core.masonry.api"
