[project]
name = "pypension"
version = "0.1.0"
description = "Backtest pension investments"
license = "Proprietary"
authors = [
    { name = "bollard", email = "358225+bollard@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">= 3.13"

dependencies = [
    "matplotlib >= 3.10.8",
    "numpy >= 2.4.0",
    "pandas >= 2.3.3",
    "scipy >= 1.16.3",
    "seaborn >= 0.13.2",
    "yfinance >= 1.0.0",
]

[tool.poetry]
requires-poetry = ">= 2.0"
packages = [
    { include = "pypension", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ruff = ">= 0.14.10"

[tool.ruff]
target-version = "py313"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I"] # isort

[build-system]
requires = ["poetry-core >= 2.0.0, < 3.0.0"]
build-backend = "poetry.core.masonry.api"
